[tool.poetry]
name = "x1201-exporter"
version = "1.0.0"
description = ""
authors = ["Dominik Nedvedik <dominik.nedvedik@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
smbus2 = "^0.4.3"
prometheus-client = "^0.21.0"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
gpiod = "^2.2.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
requests = "^2.32.3"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
